feat(booking): add core domain models, value objects, and business rules for booking module